<resources>
    <string name="app_name">Wise Contlol</string>
    <string name="tasks">Задачи</string>
    <string name="categories">Категории</string>
    <string name="category">Категория:</string>
    <string name="edit">Изменить</string>
    <string name="edit_title_hint">Название задачи</string>
    <string name="submit">ok</string>
    <string name="task_edit_title">Редактирование</string>
    <string name="new_task_hint">Новая задача</string>
    <string name="task_content_hint">Описание задачи</string>
    <string name="added_category_hint">Новая категория</string>
    <string name="category_exist">Категория с таким именем уже существует!</string>
    <string name="some_error">Что-то пошло не так =(</string>
    <string name="category_added_done">Категория успешно добавлена!</string>
    <string name="close">Закрыть</string>

    <string name="empty_category">Без категории</string>
    <string name="task_title_request">Нужно дать название задаче!</string>
    <string name="start_date">Начало: %s</string>
    <string name="remember">Уведомление: %s</string>
    <string name="remember_temp">%s до начала</string>

    <string name="send_success">Отправлено успешно!</string>
    <string name="send_error">Не удалось отпраить sms =( </string>
    <string name="tasks_of_day">План дня</string>
    <string name="chaos">Хаос</string>
    <string name="remember_null">Уведомление</string>
    <string name="delete">Удалить</string>

</resources>
