<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        style="@style/ToolbarTitle"
        android:text="@string/app_name"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/tasks_of_day"
        style="@style/MainButtons"
        android:text="@string/tasks_of_day"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chaos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/chaos"
        style="@style/MainButtons"
        android:text="@string/chaos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tasks_of_day"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="MissingConstraints"/>


    <Button
        android:id="@+id/tasks"
        style="@style/MainButtons"
        android:text="@string/tasks"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chaos"/>


    <Button
        android:id="@+id/categories"
        style="@style/MainButtons"
        android:text="@string/categories"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasks"/>


    <FrameLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/add_task"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:background="@null"
        android:padding="16dp"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="@+id/bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom"/>

    <ImageButton
        android:id="@+id/add_category"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:background="@null"
        android:padding="16dp"
        android:src="@android:drawable/ic_menu_today"
        app:layout_constraintBottom_toBottomOf="@+id/bottom"
        app:layout_constraintHorizontal_bias=".9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom"/>

    <ImageButton
        android:id="@+id/email"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:background="@null"
        android:padding="16dp"
        android:src="@android:drawable/ic_dialog_email"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/top"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top"/>


</androidx.constraintlayout.widget.ConstraintLayout>